Hiding Jump/StackFrame Verify [No Longer Needed]

--- a/files/css/global.css
+++ b/files/css/global.css
@@ -247,3 +247,16 @@ body {
 #debugging_chains {
 	display: none;
 }
+
+#gui_chk_search_verify_jumps {
+	display: none;
+}
+#verify_offsets {
+	display: none;
+}
+#gui_chk_search_verify_stackframe {
+	display: none;
+}
+#verify_stackframe {
+	display: none;
+}
